# zeddy

./: CMakeLists.txt
apps/: CMakeLists.txt  zeddyfun.cc
crypto/: ae.hh  base64.cc  base64.hh  crypto.cc  crypto.hh  ocb.cc
etc/: build_type.cmake  cflags.cmake
network/: connection.cc  connection.hh  formats.cc  formats.hh  keys.cc  receiver.cc  sender.cc  sender.hh
util/: address.cc  eventloop.cc  eventloop.hh  file_descriptor.cc  mmap.cc  parser.hh  socket.cc  socket.hh  spans.hh  stackbuffer.hh  stats_printer.cc  stats_printer.hh  timer.hh  typed_ring_buffer.hh
video/: camera.cc  camera.hh  h264_encoder.cc  h264_encoder.hh  raster.hh  scale.cc  scale.hh  video_source.cc  video_source.hh  videoclient.cc
